# trader

./: .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml  problem.md  quantd_live_repro.db-journal  remind.md  rules.md  run.bat  start.bat  tech.md  todo.md  trader-cli.local.example.ps1  trader-cli.ps1  trader-server.local.example.ps1  trader-server.ps1  记录.md
apps/trader-cli/: Cargo.toml
apps/trader-cli/src/: main.rs
apps/trader-cli/tests/: cli_tests.rs
apps/trader-server/: Cargo.toml
apps/trader-server/src/: main.rs
crates/algorithm/: Cargo.toml
crates/algorithm/src/: algorithm.rs
crates/algorithm/tests/: algorithm_tests.rs
crates/alpha/: Cargo.toml
crates/alpha/src/: alpha.rs  lib.rs
crates/alpha/tests/: alpha_composite_tests.rs
crates/api/: Cargo.toml
crates/api/src/: api.rs  error.rs  handlers.rs  lib.rs  middleware.rs  state.rs  ws.rs
crates/api/tests/: api_tests.rs  backtest_api_tests.rs  http_smoke.rs  runtime_controls_smoke.rs  runtime_cycle_smoke.rs  terminal_trading_smoke.rs  ws_smoke.rs  ws_tests.rs
crates/backtest/: Cargo.toml
crates/backtest/src/: backtest.rs  lib.rs
crates/backtest/tests/: backtest_tests.rs  persistent_backtest_tests.rs
crates/broker/: Cargo.toml
crates/broker/src/: binance.rs  broker.rs  ibkr.rs  lib.rs  reconciliation_gate.rs
crates/broker/tests/: broker_tests.rs
crates/core/: Cargo.toml
crates/core/src/: account.rs  lib.rs  market.rs  order.rs  symbol.rs
crates/core/tests/: domain_tests.rs
crates/data/: Cargo.toml
crates/data/src/: bar.rs  csv.rs  data.rs  lib.rs  parquet.rs  quote.rs
crates/data/src/ingestion/: binance_funding.rs  binance_meta.rs  corporate_actions.rs  http_retry.rs  mod.rs  tracker.rs
crates/data/tests/: csv_loader_tests.rs  data_tests.rs  ingestion_tests.rs  parquet_tests.rs
crates/db/: Cargo.toml
crates/db/migrations/: 001_initial.sql  002_phase0_shared.sql  003_exec_schema.sql  004_runtime_controls.sql  005_runtime_cycle_history.sql  006_terminal_order_fields.sql
crates/db/src/: bars.rs  bootstrap.rs  connection.rs  db.rs  execution_profiles.rs  instruments.rs  lib.rs  orders.rs  reconciliation.rs  runtime_controls.rs  runtime_cycle_history.rs  signals.rs  system_config.rs
crates/db/tests/: connect_migrate.rs  terminal_orders.rs
crates/events/: Cargo.toml
crates/events/src/: bus.rs  event.rs  events.rs  lib.rs  log_writer.rs
crates/events/tests/: event_tests.rs  log_writer_tests.rs
crates/exec/: Cargo.toml
crates/exec/benches/: quality_bench.rs
crates/exec/src/: adapter.rs  error.rs  exec.rs  lib.rs  live_stub.rs  paper.rs  router.rs  system.rs
crates/exec/src/adapters/: longbridge.rs  mod.rs
crates/exec/src/api/: grpc.rs  health.rs  http.rs  mod.rs  ws.rs
crates/exec/src/config/: mod.rs
crates/exec/src/core/: mod.rs  order.rs  position.rs  types.rs
crates/exec/src/monitor/: alert.rs  metrics.rs  mod.rs  pnl.rs  tracing.rs
crates/exec/src/orders/: iceberg.rs  mod.rs  stop.rs  twap.rs
crates/exec/src/persistence/: fills.rs  index.rs  mod.rs  orders.rs  positions.rs  snapshot.rs  wal.rs
crates/exec/tests/: api_integration_tests.rs  execution_advanced_tests.rs  execution_core_tests.rs  monitoring_tests.rs  order_management_router_tests.rs  persistence_tests.rs  prod_tests.rs
crates/feature_store/: Cargo.toml
crates/feature_store/src/: feature_store.rs
crates/feature_store/tests/: feature_store_tests.rs
crates/infra/: Cargo.toml
crates/infra/benches/: infra_bench.rs
crates/infra/src/: lib.rs
crates/infra/tests/: chaos_tests.rs  integration_tests.rs
crates/longbridge_adapters/: Cargo.toml
crates/longbridge_adapters/src/: clients.rs  exec_lb.rs  ingest_lb.rs  longbridge_adapters.rs
crates/market_data/: Cargo.toml
crates/market_data/src/: market_data.rs
crates/market_rules/: Cargo.toml
crates/market_rules/src/: market_rules.rs
crates/market_rules/tests/: market_rules_tests.rs
crates/marketdata/: Cargo.toml
crates/marketdata/benches/: data_bench.rs
crates/marketdata/src/: marketdata.rs
crates/marketdata/tests/: data_core_tests.rs  data_integration_tests.rs  infrastructure_tests.rs  replay_quality_tests.rs
crates/oms/: Cargo.toml
crates/oms/src/: lib.rs  oms.rs
crates/oms/tests/: oms_tests.rs
crates/paper/: Cargo.toml
crates/paper/src/: binance.rs  ibkr.rs  paper.rs
crates/paper/tests/: paper_cancellation_tests.rs  paper_stream_tests.rs  paper_tests.rs  persistent_paper_tests.rs
crates/pipeline/: Cargo.toml
crates/pipeline/src/: execution_guard.rs  lib.rs  pipeline.rs  risk.rs  universe.rs
crates/pipeline/tests/: execution_guard_smoke.rs  universe_cycle_tests.rs
crates/portfolio/: Cargo.toml
crates/portfolio/src/: lib.rs  portfolio.rs
crates/portfolio/tests/: portfolio_tests.rs
crates/quantd/: Cargo.toml
crates/quantd/src/: lib.rs  main.rs  pipeline.rs  quantd.rs
crates/quantd/tests/: four_venues_mvp.rs
crates/replay/: Cargo.toml
crates/replay/src/: replay.rs
crates/replay/tests/: replay_event_tests.rs  replay_tests.rs
crates/risk/: Cargo.toml
crates/risk/src/: lib.rs  live_guards.rs  risk.rs
crates/risk/tests/: live_guard_tests.rs  risk_advanced_tests.rs  risk_integration_tests.rs  risk_system_test.rs  risk_tests.rs  risk_unit_tests.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: cancel.rs  live.rs  manager.rs  process.rs  reconciliation_gate.rs  run_spec.rs  runtime.rs  worker_protocol.rs
crates/runtime/tests/: live_process_supervisor_tests.rs  live_runtime_tests.rs  run_spec_tests.rs  runtime_manager_tests.rs  worker_protocol_tests.rs
crates/storage/: Cargo.toml
crates/storage/src/: db.rs  repositories.rs  storage.rs
crates/storage/tests/: runtime_repository_tests.rs  storage_tests.rs
crates/strategies/: Cargo.toml
crates/strategies/src/: lib.rs  strategies.rs
crates/strategies/tests/: strategy_tests.rs
crates/strategy/: Cargo.toml
crates/strategy/benches/: strategy_bench.rs
crates/strategy/src/: lib.rs  lstm.rs  model.rs  strategy.rs
crates/strategy/tests/: backtest_tests.rs  integration_test.rs
(+566 files in other folders)
