[workspace]
resolver = "2"
members = [
    "apps/trader-cli",
    "apps/trader-server",
    "crates/core",
    "crates/events",
    "crates/config",
    "crates/storage",
    "crates/data",
    "crates/market_rules",
    "crates/universe",
    "crates/alpha",
    "crates/portfolio",
    "crates/risk",
    "crates/execution",
    "crates/oms",
    "crates/broker",
    "crates/backtest",
    "crates/replay",
    "crates/accounting",
    "crates/metrics",
    "crates/api",
    "crates/indicators",
    "crates/feature_store",
    "crates/strategies",
]

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT"
rust-version = "1.96"

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
time = "0.3"
rust_decimal = { version = "1", features = ["serde"] }
rust_decimal_macros = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "chrono", "uuid", "migrate"] }
polars = { version = "0.50", features = ["lazy", "parquet", "temporal", "dtype-decimal"] }
axum = { version = "0.8", features = ["ws", "macros"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio-tungstenite = "0.26"
parking_lot = "0.12"
dashmap = "6"
