[workspace]
resolver = "2"
members = [
    "apps/trader-cli",
    "apps/trader-server",
    "crates/core",
    "crates/events",
    "crates/config",
    "crates/storage",
    "crates/data",
    "crates/market_rules",
    "crates/universe",
    "crates/alpha",
    "crates/algorithm",
    "crates/portfolio",
    "crates/risk",
    "crates/execution",
    "crates/oms",
    "crates/broker",
    "crates/backtest",
    "crates/replay",
    "crates/runtime",
    "crates/paper",
    "crates/accounting",
    "crates/metrics",
    "crates/api",
    "crates/indicators",
    "crates/feature_store",
    "crates/strategies",
]

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT"
rust-version = "1.96"

[workspace.dependencies]
accounting = { path = "crates/accounting" }
algorithm = { path = "crates/algorithm" }
alpha = { path = "crates/alpha" }
anyhow = "1"
api = { path = "crates/api" }
async-trait = "0.1"
backtest = { path = "crates/backtest" }
broker = { path = "crates/broker" }
config = { path = "crates/config" }
data = { path = "crates/data" }
events = { path = "crates/events" }
execution = { path = "crates/execution" }
futures = "0.3"
hex = "0.4"
hmac = "0.12"
ibapi = "3"
metrics = { path = "crates/metrics" }
market_rules = { path = "crates/market_rules" }
oms = { path = "crates/oms" }
paper = { path = "crates/paper" }
portfolio = { path = "crates/portfolio" }
replay = { path = "crates/replay" }
risk = { path = "crates/risk" }
runtime = { path = "crates/runtime" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
storage = { path = "crates/storage" }
strategies = { path = "crates/strategies" }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
trader_core = { package = "trader-core", path = "crates/core" }
universe = { path = "crates/universe" }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
time = "0.3"
rust_decimal = { version = "1", features = ["serde"] }
rust_decimal_macros = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "chrono", "uuid", "migrate"] }
polars = { version = "0.50", features = ["lazy", "parquet", "temporal", "dtype-decimal"] }
axum = { version = "0.8", features = ["ws", "macros"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio-tungstenite = "0.26"
parking_lot = "0.12"
dashmap = "6"
