[package]
name = "trader-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "trader"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
backtest.workspace = true
clap.workspace = true
config.workspace = true
data.workspace = true
rust_decimal.workspace = true
storage.workspace = true
tokio.workspace = true

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
