[package]
name = "trader-server"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
api = { path = "../../crates/api" }
anyhow.workspace = true
axum.workspace = true
config = { path = "../../crates/config" }
storage = { path = "../../crates/storage" }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
