[package]
name = "trader-server"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
api.workspace = true
anyhow.workspace = true
axum.workspace = true
config.workspace = true
storage.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
