[package]
name = "algorithm"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
path = "src/algorithm.rs"

[dependencies]
accounting.workspace = true
alpha.workspace = true
anyhow.workspace = true
data.workspace = true
events.workspace = true
execution.workspace = true
market_rules.workspace = true
oms.workspace = true
portfolio.workspace = true
risk.workspace = true
rust_decimal.workspace = true
serde.workspace = true
serde_json.workspace = true
strategies.workspace = true
trader_core.workspace = true
tracing.workspace = true
universe.workspace = true
chrono.workspace = true

[dev-dependencies]
rust_decimal_macros.workspace = true
tokio.workspace = true
