[package]
name = "alpha"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
trader_core = { package = "trader-core", path = "../core" }
data = { path = "../data" }
events = { path = "../events" }
chrono.workspace = true
rust_decimal.workspace = true
thiserror.workspace = true

[dev-dependencies]
rust_decimal_macros.workspace = true
