[package]
name = "api"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
path = "src/api.rs"

[dependencies]
anyhow.workspace = true
axum.workspace = true
backtest.workspace = true
config.workspace = true
data.workspace = true
metrics.workspace = true
paper.workspace = true
serde.workspace = true
rust_decimal.workspace = true
sqlx.workspace = true
storage.workspace = true
tokio.workspace = true
tower.workspace = true
