[package]
name = "api"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
path = "src/api.rs"

[dependencies]
anyhow.workspace = true
axum.workspace = true
backtest.workspace = true
broker.workspace = true
chrono.workspace = true
config.workspace = true
data.workspace = true
events.workspace = true
feature_store.workspace = true
metrics.workspace = true
paper.workspace = true
replay.workspace = true
serde.workspace = true
serde_json.workspace = true
rust_decimal.workspace = true
runtime.workspace = true
storage.workspace = true
strategies.workspace = true
tokio.workspace = true
toml.workspace = true
tower.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[dev-dependencies]
futures.workspace = true
tokio-tungstenite.workspace = true
