[package]
name = "backtest"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
path = "src/backtest.rs"

[dependencies]
accounting.workspace = true
algorithm.workspace = true
broker.workspace = true
data.workspace = true
events.workspace = true
execution.workspace = true
market_rules.workspace = true
portfolio.workspace = true
risk.workspace = true
storage.workspace = true
strategies.workspace = true
trader_core.workspace = true
anyhow.workspace = true
chrono.workspace = true
rust_decimal.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
feature_store.workspace = true
rust_decimal_macros.workspace = true
