[package]
name = "broker"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
path = "src/broker.rs"

[dependencies]
trader_core.workspace = true
async-trait.workspace = true
rust_decimal.workspace = true
thiserror.workspace = true
uuid.workspace = true
tokio.workspace = true

[dev-dependencies]
rust_decimal_macros.workspace = true
