[package]
name = "broker"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
path = "src/broker.rs"

[dependencies]
trader_core.workspace = true
async-trait.workspace = true
chrono.workspace = true
hex.workspace = true
hmac.workspace = true
reqwest.workspace = true
rust_decimal.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
uuid.workspace = true
tokio.workspace = true

[dev-dependencies]
rust_decimal_macros.workspace = true
