[package]
name = "trader-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
name = "trader_core"
path = "src/trader_core.rs"

[dependencies]
serde.workspace = true
uuid.workspace = true
rust_decimal.workspace = true

[dev-dependencies]
serde_json.workspace = true
