[package]
name = "data"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
chrono.workspace = true
csv = "1"
rust_decimal.workspace = true
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
rust_decimal_macros.workspace = true
