[package]
name = "data"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
path = "src/data.rs"

[dependencies]
chrono.workspace = true
csv = "1"
polars.workspace = true
rust_decimal.workspace = true
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
rust_decimal_macros.workspace = true
