[package]
name = "db"
version.workspace = true
edition.workspace = true

[lib]
path = "src/db.rs"

[dependencies]
sqlx.workspace = true
serde.workspace = true
tokio.workspace = true
thiserror.workspace = true
domain.workspace = true
chrono.workspace = true
async-trait.workspace = true
parking_lot.workspace = true
percent-encoding.workspace = true
pgvector.workspace = true
schemars.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-opentelemetry.workspace = true
