[package]
name = "events"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
trader_core = { package = "trader-core", path = "../core" }
serde.workspace = true
uuid.workspace = true
chrono.workspace = true
rust_decimal.workspace = true
tokio.workspace = true
thiserror.workspace = true

[dev-dependencies]
serde_json.workspace = true
