[package]
name = "feature_store"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
path = "src/feature_store.rs"

[dependencies]
polars.workspace = true
rust_decimal.workspace = true
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
rust_decimal_macros.workspace = true
