[package]
name = "infra"
version.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"

[[bench]]
name = "infra_bench"
path = "benches/infra_bench.rs"
harness = false

[dependencies]
thiserror.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync", "time"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
