[package]
name = "longbridge_adapters"
version.workspace = true
edition.workspace = true

[lib]
path = "src/longbridge_adapters.rs"

[dependencies]
async-trait.workspace = true
db.workspace = true
domain.workspace = true
exec.workspace = true
ingest.workspace = true
longbridge.workspace = true
rust_decimal.workspace = true
serde_json.workspace = true
tracing.workspace = true
tokio.workspace = true
uuid.workspace = true
