[package]
name = "market_rules"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
path = "src/market_rules.rs"

[dependencies]
rust_decimal.workspace = true
thiserror.workspace = true
trader_core.workspace = true

[dev-dependencies]
rust_decimal_macros.workspace = true
