[package]
name = "oms"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
path = "src/oms.rs"

[dependencies]
trader_core.workspace = true
async-trait.workspace = true
rust_decimal.workspace = true
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
rust_decimal_macros.workspace = true
