[package]
name = "paper"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
backtest = { path = "../backtest" }
data = { path = "../data" }
storage = { path = "../storage" }
anyhow.workspace = true

[dev-dependencies]
rust_decimal.workspace = true
rust_decimal_macros.workspace = true
tokio.workspace = true
