[package]
name = "paper"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
path = "src/paper.rs"

[dependencies]
accounting.workspace = true
anyhow.workspace = true
backtest.workspace = true
broker.workspace = true
data.workspace = true
execution.workspace = true
market_rules.workspace = true
oms.workspace = true
portfolio.workspace = true
risk.workspace = true
rust_decimal.workspace = true
runtime.workspace = true
storage.workspace = true
strategies.workspace = true
tokio.workspace = true
trader_core.workspace = true

[dev-dependencies]
rust_decimal.workspace = true
rust_decimal_macros.workspace = true
