[package]
name = "pipeline"
version.workspace = true
edition.workspace = true

[lib]
path = "src/pipeline.rs"

[dependencies]
db.workspace = true
domain.workspace = true
exec.workspace = true
ingest.workspace = true
serde.workspace = true
strategy.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
async-trait.workspace = true
tokio.workspace = true
