[package]
name = "quantd"
version.workspace = true
edition.workspace = true

[[bin]]
name = "quantd"
path = "src/main.rs"

[dependencies]
axum.workspace = true
config = { path = "../config" }
db = { path = "../db" }
domain = { path = "../domain" }
ingest = { path = "../ingest" }
exec = { path = "../exec" }
strategy = { path = "../strategy" }
api = { path = "../api" }
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
