[package]
name = "quantd"
version.workspace = true
edition.workspace = true

[[bin]]
name = "quantd"
path = "src/main.rs"

[dependencies]
axum.workspace = true
config.workspace = true
db.workspace = true
domain.workspace = true
ingest.workspace = true
exec.workspace = true
strategy.workspace = true
pipeline.workspace = true
api.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
