[package]
name = "replay"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
data = { path = "../data" }
events = { path = "../events" }
tokio.workspace = true

[dev-dependencies]
rust_decimal.workspace = true
rust_decimal_macros.workspace = true
