[package]
name = "replay"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
path = "src/replay.rs"

[dependencies]
data.workspace = true
events.workspace = true
serde.workspace = true
tokio.workspace = true

[dev-dependencies]
rust_decimal.workspace = true
rust_decimal_macros.workspace = true
