[package]
name = "risk"
version.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
domain.workspace = true
strategy.workspace = true
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync", "time"] }
tracing = "0.1"
rand = "0.8"
rand_distr = "0.4"
