[package]
name = "risk"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
path = "src/risk.rs"

[dependencies]
trader_core.workspace = true
data.workspace = true
events.workspace = true
portfolio.workspace = true
chrono.workspace = true
rust_decimal.workspace = true
thiserror.workspace = true

[dev-dependencies]
rust_decimal_macros.workspace = true
