[package]
name = "runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
path = "src/runtime.rs"

[dependencies]
anyhow.workspace = true
broker.workspace = true
chrono.workspace = true
serde_json.workspace = true
sqlx.workspace = true
storage.workspace = true
tokio.workspace = true
uuid.workspace = true
