[package]
name = "runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
path = "src/runtime.rs"

[dependencies]
anyhow.workspace = true
broker.workspace = true
chrono.workspace = true
events.workspace = true
rust_decimal.workspace = true
serde_json.workspace = true
storage.workspace = true
tokio.workspace = true
uuid.workspace = true
reqwest.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
trader_core.workspace = true

[dev-dependencies]
async-trait.workspace = true
