[package]
name = "strategies"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
trader_core.workspace = true
data.workspace = true
events.workspace = true
chrono.workspace = true
rust_decimal.workspace = true
thiserror.workspace = true

[dev-dependencies]
rust_decimal_macros.workspace = true
