[package]
name = "strategies"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
path = "src/strategies.rs"

[dependencies]
alpha.workspace = true
trader_core.workspace = true
data.workspace = true
events.workspace = true
chrono.workspace = true
indicators.workspace = true
rust_decimal.workspace = true
thiserror.workspace = true
universe.workspace = true

[dev-dependencies]
rust_decimal_macros.workspace = true
